--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,21 @@ image: docker:latest
 services:
   - docker:dind
 
+before_script:
+  - apk add --no-cache docker-compose
+
+stages:
+  - build
+  - tear
+
 build:
+  stage: build
   script:
-    - apk add --no-cache docker-compose
     - docker-compose up -d
+
+tear:
+  stage: tear
+  dependencies:
+    - build
+  script:
+    - docker-compose down
