update docker compose version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: "3"
+version: "3.8"
 
 services:
   db:
-    image: mysql:5.7
+    image: mysql:latest
     volumes:
       - ./db/data:/var/lib/mysql
     restart: always
